dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollouts-demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rollouts-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 10
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo-container
          image: maracinebogdan88/hello-world-expressjs
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 50m
              memory: 50Mi
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            failureThreshold: 1
            successThreshold: 1
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 1
