dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
                name: express-app-svc
                port:
                  number: 30000
